# trujilloai-landing-backend

./: .env.example  .gitconfig  .gitignore  Dockerfile  main.py  pyproject.toml  sonar-project.properties
.ebextensions/: 01_websocket.config  02_alb.config  03_app_debug.config  04_proxy.config  05_logging.config  06_diagnose.config  07_error_capture.config  08_cors.config
.ebextensions/nginx/conf.d/: auth_debug.conf  cors.conf  proxy_timeout.conf
.github/workflows/: aws-eb-deploy.yml  aws-lambda-deploy.yml  aws-lambda-deploy.yml.bak
conf.d/: websocket.conf
scripts/: __init__.py  expose_api.py  recover_results.py  remove_corrupted_tasks.py  retry_tasks.py  test_elevenlabs.py  update_all_tasks.py
scripts/demo_aibi_database/: __init__.py  setup_database.py  utils.py
scripts/demo_aibi_database/data/: categories.json  colors.json  customers.json  customers_extension.json  materials.json  payment_methods.json  products.json  products_extension.json  regions.json  sale_items.json  sale_items_extension.json  sales.json  sales_extension.json  sectors.json
src/: __init__.py
src/app/: api.py  api_responses.py  app.py  error_handling.py  errors.py  exception.py  generic_dtos.py
src/app/acces_tokens_management/: access_tokens_manager.py  dtos.py  responses.py
src/config/: scopes.py  vars_grabber.py
src/utils/: decorators.py  dict_toolbox.py  exception.py  json_toolbox.py  list_toolbox.py  metaclasses.py  requests_toolbox.py  sql_toolbox.py  string_toolbox.py  time_toolbox.py  toolbox.py
tests/: __init__.py  conftest.py  test_aws.py  test_main.py
(+177 files in other folders)
