[tool.poetry]
name = "trujilloai-landing-backend"
version = "0.1.0"
description = "Trujillo AI Landing Backend"
authors = ["Oriol Trujillo <trujillo.oriol@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.0"
fastapi = "^0.115.11"
requests = "^2.31.0"
boto3 = "^1.28.15"
botocore = "^1.31.15"
pytz = "^2023.3"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
mangum = "^0.17.0"
pyngrok = "^7.2.3"
elevenlabs = "^1.54.0"
langchain = "^0.3.21"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylint = "^2.15.5"
black = "^22.10.0"
pytest = "^7.1.3"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
